--- a/package.json
+++ b/package.json
@@ -31,9 +31,17 @@
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
     "react": "^15.6.1",
+    "react-addons-perf": "^15.4.2",
+    "react-bootstrap": "^0.31.0",
     "react-dev-utils": "^3.0.2",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
